Dark mode mobile fix

--- a/src/components/DarkMode/index.css
+++ b/src/components/DarkMode/index.css
@@ -66,3 +66,9 @@ input:checked + .dark-mode__slider {
 .app_dark .dark-mode__label {
   color: #9f9f9f;
 }
+
+@media (orientation: portrait) and (max-width: 767px) {
+  .dark-mode__label {
+    font-size: 0.7em;
+  }
+}
